fixed z-index issue on homepage

--- a/styles/style.css
+++ b/styles/style.css
@@ -295,7 +295,7 @@ header {
     border-bottom: #d6d6d6 1px solid;
     position: fixed;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
     margin-top: 28px;
 }
 
@@ -477,7 +477,7 @@ nav ul li:hover ul {
 
 #showcase {
     display: flex;
-    z-index: -1;
+    /* z-index: -1; */
     flex-direction: row;
     /* flex-wrap: wrap; */
     /* position: relative; */
@@ -520,6 +520,13 @@ background-image: url("https://www.transparenttextures.com/patterns/concrete-wal
     grid-template-columns: 1fr 1fr;
 } */
 
+/* invisible layer to keep links accessable */
+
+.img-layer {
+    z-index: 1;
+    min-height: 100vh;
+}
+
 .hero-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -527,7 +534,7 @@ background-image: url("https://www.transparenttextures.com/patterns/concrete-wal
     grid-gap: 5px;
     /* margin-top: 130px; */
     margin-top: 15vh;
-    width: 50%;
+    width: 51%;
     float: right;
     z-index: 0;
 }
@@ -562,10 +569,11 @@ background-image: url("https://www.transparenttextures.com/patterns/concrete-wal
 
 /* -------------------------------end grid layout for home page */
 
-.show-text {
+#showcase .show-text {
     width: 38%;
     float: left;
     text-align: left;
+    z-index: 2;
 }
 
 #showcase h1 {
